# fixing-polygons-in-osm

./: README.md  background.md  faq.md
area-stats-and-report/: CMakeLists.txt  area_stats_and_report.cpp  area_ways.cpp  area_ways_relid.cpp
area-stats-and-reports/: area_stats_and_report.cpp
doc/: background.md  faq.md  problems.md  rendering.md
map/: LICENSE  build.js  index.html  index.js  mapbox-gl-utils.js
osm2pgsql/: README.md  import.sh
osm2pgsql/replication/: INSTALL  replicate  replicate.init  replicate.logrotate
web/: fixed.html  fixing.html  index.html  old-style-josm.html  robots.txt
web/css/: style.css
web/map/: index.html
web/stats/: index.html  stats.js
